feat: deepen diagnose, refactor, and migrate skills with production-grade content
diagnose (+116 lines): add rollback-first stabilization, initial triage
decision tree with severity classification (P0-P3), Kubernetes deployment
failure diagnostics (CrashLoopBackOff, OOMKilled, probe failures), CI/CD
pipeline failure patterns, and concurrency/threading diagnostics including
deadlock detection and virtual thread pinning.

refactor (+135 lines): add field injection→constructor injection migration,
deprecated API replacement table, extract @ConfigurationProperties from
scattered @Value, remove dead code and unused dependencies, and multi-module
test safety with reactor-aware Maven/Gradle commands.

migrate (+292 lines): add git safety net with incremental commits and
rollback path, Spring Boot 3.x per-version breaking change catalog,
comprehensive JUnit 4→5 migration (annotations, rules, parameterized tests),
Gradle 7→8 upgrade + Groovy DSL→Kotlin DSL + version catalog adoption,
and Java 21 virtual threads adoption with pinning detection.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>